fix(payments): populate paidPackage via joins and support headquarterId